--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,3 +1,5 @@
+default_config:
+
 ####################################################
 #                                                  #
 #                 HOME ASSISTANT                   #
