--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -271,18 +271,23 @@ views:
                     text-align: center;
                   }
                   #states div:nth-child(1){
+                    margin-top: 10px;
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
                   #states div:nth-child(3){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
                   #states div:nth-child(5){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
                   #states div:nth-child(7){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
@@ -392,10 +397,12 @@ views:
                     text-align: center;
                   }
                   #states div:nth-child(3){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
                   #states div:nth-child(5){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
@@ -767,7 +774,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.abby_bulb_1
                     persist_features: true
@@ -781,7 +788,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.abby_bulb_2
                     persist_features: true
@@ -801,7 +808,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.elijah_bulb_1
                     persist_features: true
@@ -815,7 +822,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.elijah_bulb_2
                     persist_features: true
@@ -835,7 +842,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: group.kitchen_bar_lights
                     persist_features: true
@@ -849,7 +856,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.under_cabinet_light_strip
                     persist_features: true
@@ -891,6 +898,7 @@ views:
                     effects_list:
                       - random
                       - colorloop
+                  - entity: switch.vanity
               # Dining
               - type: custom:fold-entity-row
                 head:
@@ -904,7 +912,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.dining_room_bulb_1
                     persist_features: true
@@ -918,7 +926,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.dining_room_bulb_2
                     persist_features: true
@@ -938,7 +946,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.livingroom_fan_bulb_1
                     persist_features: true
@@ -952,7 +960,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.livingroom_fan_bulb_2
                     persist_features: true
@@ -966,7 +974,7 @@ views:
                         flex: auto;
                         font-size: 1.75rem;
                         font-weight: 600;
-                        text-shadow: 1px 1px var(--primary-text-color);
+                        text-shadow: 1px 1px var(--dark-color);
                       }
                     entity: light.livingroom_light_strip
                     persist_features: true
@@ -1004,9 +1012,15 @@ views:
                 cards:
                   - type: custom:vertical-stack-in-card
                     # inset -4px -4px 12px 0 rgba(77, 77, 77,.5), inset 4px 4px 12px 0 rgba(0,0,0,.7);
+                    # inset -4px -4px 12px 0 rgba(178,178, 178,.8), inset 4px 4px 12px 0 rgba(255,255,255,.6);
                     style: |
                       ha-card {
-                        box-shadow: inset -4px -4px 12px 0 rgba(178,178, 178,.8), inset 4px 4px 12px 0 rgba(255,255,255,.6);
+                        box-shadow:
+                          {% if is_state('sun.sun', 'above_horizon') %}
+                            inset -4px -4px 5px 0 rgba(77,77,77,.7), inset 4px 4px 5px 0 rgba(77,77,77,.7);
+                          {% else %}
+                            inset -4px -4px 12px 0 rgba(255, 255, 255,.5), inset 4px 4px 12px 0 rgba(255,255,255,.7);
+                          {% endif %}
                         border-radius: 30px;
                         background-color: var(--primary-background-color);
                         margin: 15px;
@@ -1246,10 +1260,14 @@ views:
                                 - border-radius: 50px
                   - break
                   - type: entities
-                    # inset -4px -4px 12px 0 rgba(77, 77, 77,.5), inset 4px 4px 12px 0 rgba(0,0,0,.7);
                     style: |
                       ha-card{
-                        box-shadow: inset -4px -4px 12px 0 rgba(178,178, 178,.8), inset 4px 4px 12px 0 rgba(255,255,255,.6);
+                        box-shadow:
+                          {% if is_state('sun.sun', 'above_horizon') %}
+                            inset -4px -4px 5px 0 rgba(77,77,77,.7), inset 4px 4px 5px 0 rgba(77,77,77,.7);
+                          {% else %}
+                            inset -4px -4px 12px 0 rgba(255, 255, 255,.5), inset 4px 4px 12px 0 rgba(255,255,255,.7);
+                          {% endif %}
                         text-align: center;
                         border-radius: 30px;
                         background-color: var(--primary-background-color);
@@ -1355,7 +1373,7 @@ views:
           - type: vertical-stack
             cards:
               - type: entities
-                title: RAM Info
+                title: Memory Info
                 show_header_toggle: false
                 style: |
                   .card-header{
@@ -1405,7 +1423,7 @@ views:
           - type: vertical-stack
             cards:
               - type: entities
-                title: System
+                title: System Info
                 show_header_toggle: false
                 style: |
                   .card-header{
@@ -1422,6 +1440,7 @@ views:
                     text-align: center;
                   }
                   #states div:nth-child(8){
+                    z-index: 1;
                     margin-bottom: -50px;
                     margin-right: 15px;
                   }
